tests/ui/diagnostic-width/long-E0609.stderr
error[E0609]: no field `field` on type `(..., ..., ..., ...)`
  --> $DIR/long-E0609.rs:10:7
   |
LL |     x.field;
   |       ^^^^^ unknown field
   |
   = note: the full name for the type has been written to '$TEST_BUILD_DIR/$FILE.long-type-hash.txt'
   = note: consider using `--verbose` to print the full type name to the console

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0609`.
